<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".version.VersionCheckActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:id="@+id/gms_version"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@android:color/holo_blue_dark"
                  android:textStyle="bold"
                  android:layout_marginEnd="@dimen/gms_version_margin"/>
        <TextView android:id="@+id/mada"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@android:color/holo_blue_dark"
                  android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">
            <CheckBox
                android:id="@+id/check_all_apps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_apps"/>
        </LinearLayout>
    </LinearLayout>

    <TextView android:id="@+id/build_display_desc"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
    <TextView android:id="@+id/build_date"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>
    <TextView android:id="@+id/factory_version"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/gms_version_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <EditText
            android:id="@+id/search_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search" />
        <Button android:id="@+id/btn_launch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/run"/>
        <Button android:id="@+id/btn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_setting"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:listSelector="@drawable/list_bg"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>

